yoshimi 1.5.8 rc1

2018-5-19 Will
* Cleaned up 'solo' interaction between CLI & GUI.

2018-5-18 Will
* Implemented universal bank swaps.
* Banks no longer private to SynthEngine.
  Too much access from Interchange needed and was
  getting silly always routing via SynthEngine!
* Updated docs.
* Improved banks swap error reporting.
* Temporarily disabled auto instance loading.
  it wasn't stable enough for release :(
* Set version as 1.5.8 rc1

2018-5-17 Will
* Changed Solo choice name 'Recoil' to 'TwoWay'.
* Reduced debounce time to 60mS.
* Improved CLI reporting.
* Improved instrument swap error messages.
* Updated docs.

2018-5-11 Will
* Completed universal instrument swaps.
* Partially updated docs.

2018-5-9 Will
* BugFix: GUI swap instrument with bank now ignored.
  Would segfault previously.
* Preparing for universal instrument swaps.
  From any root/bank to any root/bank :)

2018-5-7 Will
* Non relevant GUI settings now deactivated for LV2.

2018-5-5 Will
* CLI can now clear a part.
  set 'clear' instead of an instrument number.
* Bugfix: GUI failing to clear correct part.

2018-5-4 Will
* Added 250mS de-bounce to solo loop and recoil options.

2018-5-3 Will
* Added 'recoil' mode to channel switcher (Solo).
  Incomming CC value:
  0         ignore
  1 to 63   decrement active part MOD 16
  64 to 127 increment active part MOD 16
* Updated docs

2018-5-2 Will
* Further improvements to CLI handling of instances.
* Started preparation for possible singluar set of banks.
* Minor cosmetic update to main GUI.
* Updated docs.

2018-5-1 Will
* Improved CLI handling of instances.
* Fixed regression: Had killed LV2 again :(

2018-4-29 Will
* CLI can now close instances.
* Minor improvements to CLI instance controls.

2018-4-28 Will
* BugFix: Mixer Panel 'Edit' right click sometimes fails.
  Should open part editing window.
* Transferred instance generation to new controls.
* Added Instance generation to CLI.
* Updated docs.