@@ -1,4 +1,4 @@
-.TH yoshimi 1 "August 2017" "yoshimi 1.5.3"
+.TH yoshimi 1 "May 2018" "yoshimi 1.5.8"
 .SH NAME
 yoshimi \- a software music synthesiser
 .SH SYNOPSIS
@@ -13,6 +13,8 @@ The CLI help system is context sensitive, and apart from reminders of common ess
 e.g. Within the 'part' context '? config' will show the commands for configuration settings.
 .PP
 \fBYoshimi\fP has recently gained a very extensive MIDI learn capability, exposing the majority of controls. The same MIDI CC and Channel pair can be linked to multiple independent controls. There is also considerable post-learn editing capability.
+.PP
+Other recent extensions are the ability to import and export entire instrument banks in a safe and obvious manner. It is now also possible to swap any instrument or bank with any other, in any bank root without disrupting the rest of the structure.
 .SH COMMANDS
 .TP
 .BR \-? ", " \-\-help " Shows command syntax."
