@@ -241,9 +241,7 @@ class SynthEngine : private SynthHelper, MiscFuncs
 
         Bank &getBankRef() {return bank;}
         Bank *getBankPtr() {return &bank;}
-        unsigned int exportBank(string exportfile, size_t rootID, unsigned int bankID);
-        unsigned int importBank(string inportfile, size_t rootID, unsigned int bankID);
-        unsigned int removeBank(unsigned int bankID, size_t rootID);
+
         string getWindowTitle() {return windowTitle;}
         void setWindowTitle(string _windowTitle = "");
         void setNeedsSaving(bool ns) { needsSaving = ns; }
